Updated language translations.

--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -352,18 +352,28 @@
   <!--ChooseBackupFragment-->
   <string name="ChooseBackupFragment__restore_from_backup">Vratiti podatke iz rezervne kopije?</string>
   <string name="ChooseBackupFragment__restore_your_messages_and_media">Vratite svoje poruke i datoteke iz lokalne rezervne kopije. Ako to ne učinite sada, nećete biti u mogućnosti vratiti podatke kasnije.</string>
+  <string name="ChooseBackupFragment__icon_content_description">Sličica za vraćanje podataka</string>
+  <string name="ChooseBackupFragment__choose_backup">Odaberi rezervnu kopiju</string>
   <string name="ChooseBackupFragment__learn_more">Saznajte više</string>
   <!--RestoreBackupFragment-->
+  <string name="RestoreBackupFragment__restore_complete">Vraćanje podataka je završeno</string>
+  <string name="RestoreBackupFragment__to_continue_using_backups_please_choose_a_folder">Da biste i dalje mogli kreirati rezervne kopije, izaberite direktorij. Nove rezervne kopije bit će pohranjene na toj lokaciji.</string>
   <string name="RestoreBackupFragment__choose_folder">Odaberi direktorij</string>
   <string name="RestoreBackupFragment__not_now">Ne sada</string>
   <!--BackupsPreferenceFragment-->
   <string name="BackupsPreferenceFragment__chat_backups">Rezervne kopije poruka</string>
+  <string name="BackupsPreferenceFragment__backups_are_encrypted_with_a_passphrase">Rezervne kopije šifrirane su pomoću lozinke i pohranjene na Vašem uređaju.</string>
   <string name="BackupsPreferenceFragment__create_backup">Kreiraj rezervnu kopiju</string>
+  <string name="BackupsPreferenceFragment__last_backup">Zadnja kreirana kopija: %1$s</string>
+  <string name="BackupsPreferenceFragment__backup_folder">Direktorij za rezervne kopije</string>
   <string name="BackupsPreferenceFragment__verify_backup_passphrase">Potvrdite lozinku za rezervne kopije</string>
   <string name="BackupsPreferenceFragment__test_your_backup_passphrase">Provjerite svoju lozinku za rezervne kopije i potvrdite da je tačna</string>
   <string name="BackupsPreferenceFragment__turn_on">Uključi</string>
   <string name="BackupsPreferenceFragment__turn_off">Isključi</string>
+  <string name="BackupsPreferenceFragment__to_restore_a_backup">Da biste vratili podatke, instalirajte Signal iznova. Otvorite aplikaciju i odaberite \"Vrati podatke\", a potom pronađite rezervnu kopiju. %1$s</string>
   <string name="BackupsPreferenceFragment__learn_more">Saznajte više</string>
+  <string name="BackupsPreferenceFragment__in_progress">U toku…</string>
+  <string name="BackupsPreferenceFragment__d_so_far">%1$d do sada…</string>
   <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalu je potrebno dopuštenje da pristupi memoriji uređaja kako bi mogao kreirati rezervne kopije, ali je ono trajno uskraćeno. Molimo nastavite do postavki aplikacije, odaberite \"Dozvole\" i aktivirajte stavku \"Prostor za pohranu\". </string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Koristeći vlastitu: %s</string>
@@ -407,6 +417,11 @@
   <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">Ova verzija Signala je istekla. Ažurirajte aplikaciju sada da biste mogli slati i primati poruke.</string>
   <string name="ExpiredBuildReminder_update_now">Ažuriraj sada</string>
   <!--PendingGroupJoinRequestsReminder-->
+  <plurals name="PendingGroupJoinRequestsReminder_d_pending_member_requests">
+    <item quantity="one">%d zahtjev za članstvo na čekanju.</item>
+    <item quantity="few">%d zahtjeva za članstvo na čekanju.</item>
+    <item quantity="other">%d zahtjeva za članstvo na čekanju.</item>
+  </plurals>
   <string name="PendingGroupJoinRequestsReminder_view">Pregled</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">Dijeli sa</string>
@@ -823,7 +838,10 @@
   <string name="MessageRecord_left_group">Napustili ste grupu.</string>
   <string name="MessageRecord_you_updated_group">Ažurirali ste grupu.</string>
   <string name="MessageRecord_the_group_was_updated">Grupa je ažurirana.</string>
+  <string name="MessageRecord_you_called_date">Vi ste zvali · %1$s</string>
+  <string name="MessageRecord_missed_call_date">Propušten poziv · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s je ažurirao/la grupu.</string>
+  <string name="MessageRecord_s_called_you_date">%1$s Vas je zvao/la · %2$s</string>
   <string name="MessageRecord_called_s">Zvao/la %s</string>
   <string name="MessageRecord_s_joined_signal">%s je na Signalu!</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">Onemogućili ste nestajuće poruke.</string>
@@ -970,6 +988,8 @@
   <string name="MessageRequestBottomView_unblock">Deblokiraj</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Dopustiti %1$s da Vam šalje poruke i vidi Vaše ime i sliku? On ili ona neće znati da ste vidjeli njihove poruke dok ne prihvatite.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Dopustiti %1$s da Vam šalje poruke i vidi Vaše ime i sliku? Nećete primati poruke od njega ili nje dok ih ne prestanete blokirati.</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Nastaviti konverzaciju s ovom grupom i dopustiti njenim članovima da vide Vaše ime i sliku?</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Nastaviti konverzaciju sa %1$s i dopustiti da vidi Vaše ime i sliku?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Pristupiti ovoj grupi i dopustiti članovima da vide Vaše ime i sliku? Oni neće znati da ste vidjeli njihove poruke dok ne prihvatite.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Pristupiti ovoj grupi? Članovi neće znati da ste vidjeli njihove poruke dok ne prihvatite.</string>
   <string name="MessageRequestBottomView_unblock_this_group_and_share_your_name_and_photo_with_its_members">Prestati s blokiranjem ove grupe i dopustiti njenim članovima da vide Vaše ime i sliku? Nećete primati poruke dok je ne prestanete blokirati.</string>
@@ -1141,6 +1161,7 @@
   <string name="RegistrationActivity_more_information">Više informacija</string>
   <string name="RegistrationActivity_less_information">Manje informacija</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signalu je potrebno dopuštenje da pristupi Vašim kontaktima i datotekama kako biste uspostavili vezu sa prijateljima i razmjenjivali poruke i zaštićene pozive</string>
+  <string name="RegistrationActivity_signal_needs_access_to_your_contacts_in_order_to_connect_with_friends">Signalu je potrebno dopuštenje da pristupi Vašim kontaktima kako biste uspostavili vezu sa prijateljima i razmjenjivali poruke i zaštićene pozive</string>
   <string name="RegistrationActivity_rate_limited_to_service">Pokušali ste previše puta registrovati ovaj broj. Molimo pokušajte ponovo kasnije.</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Povezivanje nije uspjelo. Molimo provjerite internet-konekciju i pokušajte ponovo.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Da biste na jednostavan način potvrdili svoj telefonski broj, možete Signalu omogućiti pristup SMS porukama i on će automatski preuzeti kōd za verifikaciju.</string>
@@ -1321,6 +1342,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">U spremniku nije pronađen sigurnosni broj za upoređivanje</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signalu je potrebno dopuštenje da pristupi kameri kako bi mogao skenirati QR kōd, ali je ono trajno uskraćeno. Molimo nastavite do postavki aplikacije, odaberite \"Dozvole\" i aktivirajte stavku \"Kamera\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Nije moguće skenirati QR kōd bez dopuštenja za pristup kameri.</string>
+  <string name="VerifyIdentityActivity_you_must_first_exchange_messages_in_order_to_view">Morate prvo razmijeniti poruke sa %1$s da biste vidjeli njegov ili njen sigurnosni broj.</string>
   <!--ViewOnceMessageActivity-->
   <!--AudioView-->
   <!--MessageDisplayHelper-->
@@ -1393,6 +1415,7 @@
   <string name="NotificationChannel_other">Ostalo</string>
   <string name="NotificationChannel_group_messages">Poruke</string>
   <string name="NotificationChannel_missing_display_name">Nepoznato</string>
+  <string name="NotificationChannel_voice_notes">Glasovne bilješke</string>
   <!--ProfileEditNameFragment-->
   <string name="ProfileEditNameFragment_successfully_set_profile_name">Uspješno je dodijeljeno ime profilu.</string>
   <string name="ProfileEditNameFragment_encountered_a_network_error">Došlo je do greške u mreži.</string>
@@ -1495,6 +1518,15 @@
   <string name="ContactSelectionListFragment_username_not_found">Korisničko ime nije pronađeno</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">\"%1$s\" ne koristi Signal. Provjerite korisničko ime i pokušajte ponovo.</string>
   <string name="ContactSelectionListFragment_you_do_not_need_to_add_yourself_to_the_group">Nema potrebe da sebe uvrštavate u grupu</string>
+  <string name="ContactSelectionListFragment_maximum_group_size_reached">Dostignuta je maksimalna veličina grupe</string>
+  <string name="ContactSelectionListFragment_signal_groups_can_have_a_maximum_of_d_members">Signal grupe mogu imati maksimalno %1$d članova.</string>
+  <string name="ContactSelectionListFragment_recommended_member_limit_reached">Dostignut je preporučljiv broj članova</string>
+  <string name="ContactSelectionListFragment_signal_groups_perform_best_with_d_members_or_fewer">Signal grupe najbolje funkcionišu sa %1$d ili manje članova. Uvrštavanje novih članova dovest će do usporenog slanja i primanja poruka.</string>
+  <plurals name="ContactSelectionListFragment_d_members">
+    <item quantity="one">%1$d član</item>
+    <item quantity="few">%1$d člana</item>
+    <item quantity="other">%1$d članova</item>
+  </plurals>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">Nema blokiranih lica</string>
   <!--contact_selection_list_fragment-->
@@ -2198,6 +2230,7 @@
   <string name="ResearchMegaphoneDialog_we_believe_in_privacy"><![CDATA[<p><b>Mi vjerujemo u privatnost.</b></p><p>Signal Vas ne prati, niti prikuplja Vaše podatke. Da bismo unaprijedili Signal, oslanjamo se na utiske i sugestije korisnika, <b>i voljeli bismo čuti Vaše.</b></p><p>Pokrenuli smo anketu s ciljem da razumijemo kako Vi koristite Signal. Naša anketa ne pohranjuje bilo kakve podatke na temelju kojih biste bili identifikovani. Ako želite s nama podijeliti dodatna zapažanja, imat ćete mogućnost da ostavite kontakt-informacije.</p><p>Ako možete izdvojiti nekoliko minuta i kazati nam svoje utiske, bit ćemo sretni da ih saslušamo.</p>]]></string>
   <string name="ResearchMegaphoneDialog_take_the_survey">Započni anketu</string>
   <string name="ResearchMegaphoneDialog_no_thanks">Ne, hvala</string>
+  <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_alchemer_at_the_secure_domain">Anketa se sprovodi preko Alchemera na sigurnoj domeni surveys.signalusers.org</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Sličica transporta</string>
   <string name="ConversationListFragment_loading">Učitavanje…</string>
@@ -2213,6 +2246,8 @@
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Otključajte kako biste vidjeli poruke na čekanju</string>
   <string name="enter_backup_passphrase_dialog__backup_passphrase">Lozinka za rezervne kopije</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">Rezervne kopije bit će pohranjene u memoriju uređaja i šifrirane lozinkom navedenom dolje. Morate znati lozinku da biste mogli vratiti podatke iz rezervne kopije.</string>
+  <string name="backup_enable_dialog__you_must_have_this_passphrase">Morate imati ovu lozinku kako biste mogli vratiti podatke iz rezervne kopije.</string>
+  <string name="backup_enable_dialog__folder">Direktorij</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">Zapisao/la sam ovu lozinku. Bez nje neću moći vratiti podatke iz rezervne kopije.</string>
   <string name="registration_activity__restore_backup">Vrati podatke</string>
   <string name="registration_activity__skip">Preskoči</string>
@@ -2238,6 +2273,7 @@
   <string name="BackupDialog_delete_backups">Obrisati rezervne kopije?</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">Onemogućiti i obrisati sve lokalne rezervne kopije?</string>
   <string name="BackupDialog_delete_backups_statement">Obriši rezervne kopije</string>
+  <string name="BackupDialog_to_enable_backups_choose_a_folder">Da biste aktivirali kreiranje rezervnih kopija, izaberite direktorij. Rezervne kopije bit će pohranjene na toj lokaciji.</string>
   <string name="BackupDialog_choose_folder">Odaberi direktorij</string>
   <string name="BackupDialog_copied_to_clipboard">Kopirano u međuspremnik</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">Unesite svoju lozinku za rezervne kopije da potvrdite</string>
@@ -2248,6 +2284,12 @@
   <string name="ChatsPreferenceFragment_last_backup_s">Zadnja kreirana kopija: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">U toku</string>
   <string name="LocalBackupJob_creating_backup">Kreiram rezervnu kopiju…</string>
+  <string name="LocalBackupJobApi29_backups_disabled">Rezervne kopije su isključene.</string>
+  <string name="LocalBackupJobApi29_backup_failed">Neuspjelo kreiranje rezervne kopije.</string>
+  <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">Direktorij sa rezervnim kopijama obrisan je ili premješten.</string>
+  <string name="LocalBackupJobApi29_your_backup_file_is_too_large">Vaša rezervna kopija prevelika je za pohranjivanje na ovoj lokaciji.</string>
+  <string name="LocalBackupJobApi29_there_is_not_enough_space">Nema dovoljno prostora za pohranjivanje rezervne kopije.</string>
+  <string name="LocalBackupJobApi29_backup_failed_for_an_unknown_reason">Neuspjelo kreiranje rezervne kopije iz nepoznatih razloga.</string>
   <string name="ProgressPreference_d_messages_so_far">%d poruka do sada</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Molimo unesite kōd za potvrdu koji je poslan na %s.</string>
   <string name="RegistrationActivity_wrong_number">Pogrešan broj</string>
@@ -2360,8 +2402,11 @@
   <string name="GroupLinkBottomSheet_copied_to_clipboard">Kopirano u međuspremnik</string>
   <string name="GroupLinkBottomSheet_the_link_is_not_currently_active">Link trenutno nije aktivan</string>
   <!--VoiceNotePlaybackPreparer-->
+  <string name="VoiceNotePlaybackPreparer__could_not_start_playback">Ne mogu započeti puštanje zvučnog zapisa.</string>
   <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__voice_message">Glasovna poruka · %1$s</string>
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s do %2$s</string>
   <!--StorageUtil-->
+  <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--EOF-->
 </resources>
