--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -942,7 +942,7 @@
   <string name="MessageRecord_you_marked_your_safety_number_with_s_unverified_from_another_device">شما شمارهٔ امنیتی خود با %s را از دستگاه دیگری تأیید نشده علامت زدید</string>
   <!--MessageRequestBottomView-->
   <string name="MessageRequestBottomView_accept">پذیرفتن</string>
-  <string name="MessageRequestBottomView_continue">ادامه دادن</string>
+  <string name="MessageRequestBottomView_continue">ادامه</string>
   <string name="MessageRequestBottomView_delete">حذف</string>
   <string name="MessageRequestBottomView_block">مسدود کردن</string>
   <string name="MessageRequestBottomView_unblock">رفع مسدودیت</string>
